@@ -17,6 +17,7 @@
         * [BUGFIX]: #2727 Fixed error message when calling SELECT with table from (transparently) attached database and selecting invalid column - message was misleading.
         * [BUGFIX]: #2728, #2729 Fixed DEFAULT constraint dialog, so 1) it works when creating first column for new table, 2) it allows a single word as a default value, even the word is not an explicit string.
         * [BUGFIX]: #2697 Fixed data populate dialog.
+        * [BUGFIX]: #2731 Fixed problem with attached databases not detaching after transparent attach in cross-database queries.
 
 [3.0.1]
         * [ADDED]: When the data is being read into the Gird View, columns width gets automatically adjusted, so for small values they are shrinked and for bigger values they're enlarged, but never above the configured limit (a new option in config dialog).
